<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_secondary"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/myStyle1"
        android:text="@string/AddContact"
        android:id="@+id/txtTitle"
        android:layout_margin="21dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EntName"
        android:background="@color/white"
        android:padding="11dp"
        android:id="@+id/edtName"
        android:layout_marginBottom="11dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EntNumber"
        android:background="@color/white"
        android:padding="11dp"
        android:id="@+id/edtNumber"
        android:layout_marginBottom="11dp"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:layout_marginTop="11dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/design_default_color_secondary"
        android:layout_gravity="end"
        android:id="@+id/btnAction"/>

</LinearLayout>